# hgen

./: .gitignore  README.ko.md  README.md  build.sh  color.py  colors.py  conftest.py  grammar.ebnf  headers.py  learn.py  proto.py  protos.py  prototype_searcher.py  prototypes.py  prototypes_container.py  readme.md  regexrules.py  run.py  semver.py  setup.cfg  sources.py
hgen/: headers.py  protos.py  regexrules.py  sources.py
hgen/utils/: __init__.py
protogen/: __init__.py  headers.py  protos.py  regexrules.py  sources.py
protogen/utils/: __init__.py  utils.py
src/: run.py
src/hgen/: __init__.py  __main__.py  _version.py  headers.py  main.py  protos.py  sources.py
src/hgen/injector/: __init__.py  create_proto.py  headers.py
src/hgen/proto/: __init__.py  protos.py  sources.py
src/hgen/utils/: __init__.py  arg_parsing.py  regexrules.py  utils.py
test/: __init__.py  test_hgen.py  test_proto.py
test/c/: expected.c  test.c  test.h
test/expected/: 01.c  02.h
test/given/: 01.c  01.h  02.c  02.h
