[metadata]
name = hgen
version = 0.0.7
author = youkim
author_email = 42.4.youkim@gmail.com
description = a tool to inject prototypes into header from c files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/youkim005/hgen
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Development Status :: 3 - Alpha

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.8.2

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
	hgen = hgen:main

