[metadata]
name = hgen
version = 1.0.4
author = scarf
author_email = greenscarf005@gmail.com
description = a tool to inject prototypes into header from c files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/scarf005/hgen
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Development Status :: 3 - Alpha

[options]
package_dir =
	= src
packages = find:
python_requires = >=3.8.2
install_requires =
	termcolor

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
	hgen = hgen:main

